# Onyx-TemplateProject

./: .gitmodules  CMakeLists.txt  README.md  generate_project.bat  generate_project.ps1  generate_project.sh  generate_projects.ps1
.github/: rename_project.sh
.github/workflows/: rename_project.yml
cmake/: FindGameInput.cmake  add_onyx_module.cmake
code/: CMakeLists.txt  source_definitions.cmake
code/private/gameproject/: entrypoint.cpp  gameproject.cpp
data/: appconfig.oconf
docs/: linux_build.md  macos-build.md  windows_build.md
myproject/: CMakeLists.txt  source_definitions.cmake
myproject/public/: gameproject.h
onyx_templateproject/: CMakeLists.txt
project_name/: CMakeLists.txt  dependencies.cmake  source_definitions.cmake
project_name/private/: entrypoint.cpp  gameproject.cpp
project_name/public/: gameproject.h
